--- a/css/minigrid.css
+++ b/css/minigrid.css
@@ -13,7 +13,7 @@
         rgba(0, 0, 0, 0.6)
       ),
      
-      url('../images/solarhome.jpeg') no-repeat center;
+      url('../images/mini-grid.jpeg') no-repeat center;
     background-size: cover;
     color: #fff; /* Ensure text is visible over the background */
     padding: 50px 0;
