--- a/css/minigrid.css
+++ b/css/minigrid.css
@@ -107,31 +107,32 @@
   }
   
   
+  
   .backgroundo{
     background-color: #9EDF9C;
-     color: rgb(92, 90, 90);
+     color: white;
   }
   .backgroundo1{
-    background-color: #f8bac3;
+    background-color: #9EDF9C;
   
     ;
   }
   .textColor{
-    color:#ff4c68;
+    color: #9EDF9C;
     font-weight: bolder;
   }
   .iconStyle{
-    color: #ff4c68;
+    color: #9EDF9C;
     font-weight: 700;
     font-size: large;
     size: 32;
   }
   .styledHr{
-    color: #ff4c68;
+    color: #9EDF9C;
   
     border-width: 10px;
   }
-  
+    
   .profile-img {
     border-radius: 50%;
     height: 150px;
