--- a/css/solution.css
+++ b/css/solution.css
@@ -49,26 +49,26 @@ background: linear-gradient(300deg, #9EDF9C, #C2FFC7, #62825D);
 
 
 .backgroundo{
-  background-color: #ff4c68;
+  background-color: #9EDF9C;
    color: white;
 }
 .backgroundo1{
-  background-color: #f8bac3;
+  background-color: #9EDF9C;
 
   ;
 }
 .textColor{
-  color:#ff4c68;
+  color: #9EDF9C;
   font-weight: bolder;
 }
 .iconStyle{
-  color: #ff4c68;
+  color: #9EDF9C;
   font-weight: 700;
   font-size: large;
   size: 32;
 }
 .styledHr{
-  color: #ff4c68;
+  color: #9EDF9C;
 
   border-width: 10px;
 }
@@ -90,7 +90,7 @@ background: linear-gradient(300deg, #9EDF9C, #C2FFC7, #62825D);
 }
 
 .tertiary{
-  background-color: #ff4c68;
+  background-color: #9EDF9C;
 }
 .animateText{
   animation: blink 1.5s infinite; /* 1-second cycle, loops infinitely */
