rounded color change

--- a/css/agriculturalsolar.css
+++ b/css/agriculturalsolar.css
@@ -310,7 +310,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 50px;
-    background-color: #f8bac3;
+    background-color: #9EDF9C;
     padding: 10px; 
     height: 100px; /* Adjust for the rounded height */
     overflow: hidden;
